Fixed blockly toolbox scrollbar position (why do they not parent it...) Adjusted context menu options Made block disposal area visible again

--- a/css/blockly.css
+++ b/css/blockly.css
@@ -7,7 +7,7 @@
 
 /* Categories bar */
 .blocklyToolboxDiv {
-	background-color: transparent;
+	background-color: rgba(0, 0, 0, 0.04);
 	z-index: 10;
 }
 
